feat: manejo de errores
